added top and bottom margins for elements in mobile

--- a/index.html
+++ b/index.html
@@ -44,23 +44,17 @@
             <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 album-grid" id="album-grid">
             </div>
         </div>
+
     </div>
 
-
-</div>
-
-<div class="container-fluid footer">
     <div class="row github-footer">
         <div class="col footer-text">
-            <p class="footer-text"><a href="https://github.com/BYUCS260/lab-1-photography-website-chadjayholmes.git">[ Click here for my Github Repo ]</a></p>
+            <p class="footer-text"><a href="https://github.com/chadjayholmes/NuGroove">[ Click here for my Github Repo ]</a></p>
         </div>
     </div>
+
+
 </div>
-
-
-
-
-
 
 
 
